syntax = "proto3";
package trafficlight;

service TrafficLightService {
  // Unary RPC
  rpc GetLightStatus (LightRequest) returns (LightStatus);
  
  // Unary RPC
  rpc ChangeLightTiming (TimingRequest) returns (OperationResponse);
  
  // Server streaming RPC
  rpc MonitorTrafficFlow (IntersectionRequest) returns (stream TrafficUpdate);
}

message LightRequest {
  string light_id = 1;
}

message LightStatus {
  string light_id = 1;
  string current_color = 2;
  int32 seconds_remaining = 3;
}

message TimingRequest {
  string light_id = 1;
  int32 green_duration = 2;
  int32 yellow_duration = 3;
  int32 red_duration = 4;
}

message OperationResponse {
  bool success = 1;
  string message = 2;
}

message IntersectionRequest {
  string intersection_id = 1;
}

message TrafficUpdate {
  string intersection_id = 1;
  int32 vehicle_count = 2;
  float congestion_level = 3;
  string timestamp = 4;
}